added ESlint and performed default formatting
